# utag

./: CMakeLists.txt  README.md  build.sh
app/: CMakeLists.txt  main.cpp
app/resources/: mainwindow.ui
app/src/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  read_directory.cpp  read_directory.h  strsplit.cpp  tags.cpp  tags.h
taglib/: CMakeLists.txt  aifffile.cpp  id3v2frame.cpp  id3v2framefactory.cpp  id3v2tag.cpp  taglib_config.h
