cmake_minimum_required(VERSION 3.18)
project(taglib)

include_directories(.)

add_library(taglib 
aifffile.cpp
aiffproperties.cpp
apefile.cpp
apefooter.cpp
apeitem.cpp
apeproperties.cpp
apetag.cpp
asfattribute.cpp
asffile.cpp
asfpicture.cpp
asfproperties.cpp
asftag.cpp
attachedpictureframe.cpp
audioproperties.cpp
chapterframe.cpp
commentsframe.cpp
eventtimingcodesframe.cpp
fileref.cpp
flacfile.cpp
flacmetadatablock.cpp
flacpicture.cpp
flacproperties.cpp
flacunknownmetadatablock.cpp
generalencapsulatedobjectframe.cpp
id3v1genres.cpp
id3v1tag.cpp
id3v2extendedheader.cpp
id3v2footer.cpp
id3v2frame.cpp
id3v2framefactory.cpp
id3v2header.cpp
id3v2synchdata.cpp
id3v2tag.cpp
infotag.cpp
itfile.cpp
itproperties.cpp
modfile.cpp
modfilebase.cpp
modproperties.cpp
modtag.cpp
mp4atom.cpp
mp4coverart.cpp
mp4file.cpp
mp4item.cpp
mp4properties.cpp
mp4tag.cpp
mpcfile.cpp
mpcproperties.cpp
mpegfile.cpp
mpegheader.cpp
mpegproperties.cpp
oggfile.cpp
oggflacfile.cpp
oggpage.cpp
oggpageheader.cpp
opusfile.cpp
opusproperties.cpp
ownershipframe.cpp
podcastframe.cpp
popularimeterframe.cpp
privateframe.cpp
relativevolumeframe.cpp
rifffile.cpp
s3mfile.cpp
s3mproperties.cpp
speexfile.cpp
speexproperties.cpp
synchronizedlyricsframe.cpp
tableofcontentsframe.cpp
tag.cpp
tagunion.cpp
tagutils.cpp
tbytevector.cpp
tbytevectorlist.cpp
tbytevectorstream.cpp
tdebug.cpp
tdebuglistener.cpp
textidentificationframe.cpp
tfile.cpp
tfilestream.cpp
tiostream.cpp
tpropertymap.cpp
trefcounter.cpp
trueaudiofile.cpp
trueaudioproperties.cpp
tstring.cpp
tstringlist.cpp
tzlib.cpp
unicode.cpp
uniquefileidentifierframe.cpp
unknownframe.cpp
unsynchronizedlyricsframe.cpp
urllinkframe.cpp
vorbisfile.cpp
vorbisproperties.cpp
wavfile.cpp
wavpackfile.cpp
wavpackproperties.cpp
wavproperties.cpp
xingheader.cpp
xiphcomment.cpp
xmfile.cpp
xmproperties.cpp
)